[tool.poetry]
name = "dmphase"
version = "0.1.1"
description = "Find the best Dispersion Measure by using FFT phase angle."
authors = ["Andrew Seymour and Daniele Michilli"]
license = "GNU GENERAL PUBLIC LICENSE Version 3"
readme = "README.md"
repository = "https://github.com/danielemichilli/DM_phase"
classifiers=[
        "Operating System :: Unix",
        'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.7'
    ]
packages = [{include = "DM_phase"}]

[tool.poetry.dependencies]
python = "^3.7"
numpy = ">=1.13"
matplotlib = ">=2.1"
scipy = ">=0.19"
dm-phase = {git = "https://github.com/shinybrar/DM_phase.git", optional = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
